[package]
authors = ["Michael Daffin <michael@daffin.io>"]
name = "httptest"
version = "0.1.0"

[dependencies]
futures = "0.1.16"
hyper = "0.11.6"
reqwest = "0.8.0"
serde = "1.0.16"
serde_json = "1.0.4"
tokio-service = "0.1.0"

[dependencies.service-fn]
git = "https://github.com/tokio-rs/service-fn.git"

[dev-dependencies]
serde_derive = "1.0.16"
