[package]
authors = ["Michael Daffin <michael@daffin.io>"]
name = "httptest"
version = "0.1.0"

[dependencies]
futures = "0.1"
hyper = "0.11"
reqwest = "0.8"
serde = "1.0"
serde_json = "1.0"
tokio-service = "0.1"

[dependencies.service-fn]
git = "https://github.com/tokio-rs/service-fn.git"

[dev-dependencies]
serde_derive = "1.0"
